--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
 					<div class="row service-wrapper items mt-md-5">
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">01</div>
 								<div class="content">
@@ -256,7 +256,7 @@
 						</div>
 
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">02</div>
 								<div class="content">
@@ -267,7 +267,7 @@
 						</div>
 
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">03</div>
 								<div class="content">
@@ -278,7 +278,7 @@
 						</div>
 
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">04</div>
 								<div class="content">
@@ -289,7 +289,7 @@
 						</div>
 
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">05</div>
 								<div class="content">
@@ -300,7 +300,7 @@
 						</div>
 
 						<!-- Service Item -->
-						<div class="col-12 col-md-6 col-lg-4">
+						<div class="col-12 col-sm-6 col-lg-4">
 							<div class="item d-flex align-items-start">
 								<div class="item-count">06</div>
 								<div class="content">
